...

    private fun logRandomMessages() {
        val sampleText = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor "

        for (i in 0..29) {
            when (i % 5) {
                0 -> mLogger.log(VERBOSE, "Surface", "Test log with verbose priority for ${i}th index $sampleText")
                1 -> mLogger.log(DEBUG, "DecorView", "Test log with Debug priority for ${i}th index $sampleText")
                2 -> mLogger.log(INFO, "Surface", "Test log with Info priority for ${i}th index $sampleText")
                3 -> mLogger.log(WARN, "DecorView", "Test log with Warn priority for ${i}th index $sampleText")
                4 -> mLogger.log(ERROR, "Choreographer", "Test log with Error priority for ${i}th index $sampleText")
            }
        }
    }

    private fun manageDrawOverOtherApps() {
        val intent = Intent(Settings.ACTION_MANAGE_OVERLAY_PERMISSION, Uri.parse("package:$packageName"))
...
